--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "styled-components": "^6.1.8",
-    "zustand": "^4.5.1"
+    "zustand": "^4.5.1",
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
