--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-screens": "~3.22.0",
     "styled-components": "^6.1.8",
     "zustand": "^4.5.1",
-    "react-native-svg": "13.9.0"
+    "react-native-svg": "13.9.0",
+    "expo-secure-store": "~12.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
