--- a/package.json
+++ b/package.json
@@ -12,24 +12,26 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@tanstack/react-query": "^5.22.2",
+    "@tanstack/react-query-devtools": "^5.32.1",
     "axios": "^1.6.7",
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^50.0.17",
+    "expo-secure-store": "~12.8.1",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-hook-form": "^7.51.2",
-    "react-native": "0.72.10",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native": "0.73.6",
+    "react-native-react-query-devtools": "^1.1.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "styled-components": "^6.1.8",
-    "zustand": "^4.5.1",
-    "react-native-svg": "13.9.0",
-    "expo-secure-store": "~12.3.1"
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.10",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "typescript": "^5.3.2"
   },
