--- a/package.json
+++ b/package.json
@@ -14,26 +14,28 @@
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.32.1",
     "axios": "^1.6.7",
-    "expo": "^50.0.17",
-    "expo-secure-store": "~12.8.1",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.2",
+    "expo-secure-store": "~13.0.1",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-hook-form": "^7.51.2",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
+    "react-native-calendars": "^1.1304.1",
+    "react-native-modal": "^13.0.1",
     "react-native-react-query-devtools": "^1.1.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "styled-components": "^6.1.8",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.10",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
-    "typescript": "^5.3.2"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
