--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "react-native": "0.74.1",
     "react-native-calendars": "^1.1304.1",
     "react-native-modal": "^13.0.1",
-    "react-native-react-query-devtools": "^1.1.0",
+    "react-native-react-query-devtools": "^1.3.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-sse": "^1.2.1",
     "react-native-svg": "15.2.0",
     "styled-components": "^6.1.8",
     "zustand": "^4.5.1"
