--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@types/jest": "^29.5.10",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "prettier": "3.3.3",
     "typescript": "~5.3.3"
   },
   "private": true
