--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "3.31.1",
     "react-native-sse": "^1.2.1",
     "react-native-svg": "15.2.0",
+    "react-native-url-polyfill": "^2.0.0",
     "styled-components": "^6.1.8",
     "zustand": "^4.5.1"
   },
